crates/id_effect/tests/ui/cap_widen_invalid.stderr
error[E0425]: cannot find type `Cap` in this scope
 --> tests/ui/cap_widen_invalid.rs:9:16
  |
9 |   env.insert::<Cap<Db>>(1u32);
  |                ^^^ not found in this scope
  |
help: consider importing this struct
  |
1 + use id_effect::Cap;
  |

warning: unused import: `CapWiden`
 --> tests/ui/cap_widen_invalid.rs:1:26
  |
1 | use id_effect::{CapList, CapWiden, Env};
  |                          ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no associated function or constant named `from_env` found for struct `CapList<Ks>` in the current scope
  --> tests/ui/cap_widen_invalid.rs:10:32
   |
10 |   let wide = CapList::<(Db,)>::from_env(env);
   |                                ^^^^^^^^ associated function or constant not found in `CapList<(Db,)>`
   |
help: there is an associated function `from` with a similar name
   |
10 -   let wide = CapList::<(Db,)>::from_env(env);
10 +   let wide = CapList::<(Db,)>::from(env);
   |
